--- a/style.css
+++ b/style.css
@@ -14,15 +14,14 @@ body {
 }
 
 body::before {
-    background-image: url("img/code.png");
-    background-repeat: no-repeat;
-    background-position: right;
-    content: "";
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0.4;
+  background-color: #67bd45;
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 1; /* fundo sólido, sem transparência */
+  z-index: -1; /* garante que o fundo fique atrás de todo o conteúdo */
 }
 
 .container {
